deploy/simple/greeting-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-grpc-deployment
  labels:
    app: greeting-grpc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting-grpc-deployment
  template:
    metadata:
      labels:
        app: greeting-grpc-deployment
    spec:
      containers:
      - name: greeting-grpc
        image: greeting-grpc-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: greeting-grpc-service
spec:
  selector:
    app: greeting-grpc-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 5000
